changed icon style

--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -22,6 +22,14 @@
 
     .filter p {
         font-size: 0.8rem;
+        color: black;
+    }
+
+    .filter a {
+        text-decoration: none;
+    }
+    .filter i {
+        color: black;
     }
 
     .tax-info  {
